payment-gateway-services/common-kubernetes/kafka-service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-cluster-kafka
  namespace: kafka
spec:
  type: NodePort
  ports:
    - name: kafka
      port: 9092
      nodePort: 30092
  selector:
    strimzi.io/cluster: my-cluster
    strimzi.io/name: kafka
