payment-gateway-services/common-kubernetes/kafka-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-ingress
  namespace: kafka
spec:
  rules:
    - host: kafka.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-cluster-kafka-external
                port:
                  number: 9092
